2003-09-29  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/skyline.cc (merge_skyline): new function
	(heighten_skyline): new function

	* lily/accidental-placement.cc (position_accidentals) 
	(position_accidentals): fix todo.

2003-09-28  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/test/+.ly (texidoc): put version number inline.

	* GNUmakefile.in: remove rsync-web target.
	
	* input/regression/bar-scripts.ly (onestaff): raggedright

v/pri2003-09-28  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/*.cc: remove #if 0'd code in couple of places.

	* lily/midi-stream.cc (operator <<): rewrite.

	* lily/note-head.cc (internal_brew_molecule): 
	only make ledgers when the Staff symbol has lines.

	* ly/property-init.ly (arpeggioBracket): simplify

	* lily/translator-group.cc (execute_pushpop_property): use
	SCM_EQ_P for comparing keys. This fixes reverting
	auto-beam-settings.

2003-09-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/midi-stream.cc (operator <<): Also write MIDI string when
	midi_debug_global_b.
	(operator <<): Normalise loop.

2003-09-27  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/lilypond.py (escape_path): revise.

	* scm/music-functions.scm (set-output-property): new function.
	
2003-09-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/mknetrel: Next try in building doc on Cygwin natively;
	use addmakeflags again.

	* cygwin/lily-wins.py (escape_shell): New function; use it.

	* scripts/lilypond.py (escape_shell): Escape quotes and other
	spaces too.  Do not escape escaping backslashes.

	* make/srcdir.make.in (web-install): Must call install-WWW now.

	* mf/GNUmakefile: resolve conflict: %list.ly is a target, not a
	dependency

2003-09-27  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/lilypond.py (escape_path): escape quotes too. 

	* Documentation/user/lilypond.tely (Unified index): rename Index
	to accomodate Windows breakage.

	* make/lilypond.redhat.spec.in (Group): remove out=www for web-install 
