@@ -23,8 +23,9 @@ public:
   DECLARE_SCHEME_CALLBACK (brew_molecule, (SCM ));
   static Interval head_extent (Grob*, Axis);
   static Molecule brew_ledger_lines (Grob *me, int pos, int interspaces,
-				     Interval x_extent, bool take_space);
-  DECLARE_SCHEME_CALLBACK (brew_ez_molecule, (SCM ));
+				     Interval x_extent, bool);
+  DECLARE_SCHEME_CALLBACK (brew_ez_molecule, (SCM));
+  DECLARE_SCHEME_CALLBACK (extent, (SCM,SCM));
   static bool has_interface (Grob*);
   static Real stem_attachment_coordinate (Grob *, Axis a);
   static int get_balltype (Grob*) ;  
