@@ -613,6 +613,8 @@
 	(molecule-callback . ,Note_head::brew_molecule)
 	(ligature-primitive-callback . ,Note_head::brew_molecule)
 	(glyph-name-procedure . ,find-notehead-symbol)
+	(X-extent-callback . ,Note_head::extent)
+	(Y-extent-callback . ,Note_head::extent)
 	(Y-offset-callbacks  . (,Staff_symbol_referencer::callback))
 	(stem-attachment-function . ,note-head-style->attachment-coordinates)
 	(meta . ((interfaces . (rhythmic-grob-interface rhythmic-head-interface font-interface note-head-interface staff-symbol-referencer-interface item-interface ))))
@@ -1103,7 +1105,7 @@
      . (
 	(font-family . roman)
 	(style . default)
-	(molecule-callback . ,tablature-molecule-callback)
+	(molecule-callback . ,Text_item::brew_molecule)
 	(Y-offset-callbacks  . (,Staff_symbol_referencer::callback))
 	(extra-offset . (0 . -0.65)) ;; UGH! TODO: Clean this up!
 	(stem-attachment-function . ,tablature-stem-attachment-function)
